syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

import "third_party/tagger.proto";
import "third_party/pmongo.proto";

service API {
  rpc GetUser(UserID) returns (Res);
  rpc NewUser(UserInfo) returns (Res);
  rpc GetAllUsers(google.protobuf.Empty) returns (Res);
}

message UserID {
  pmongo.ObjectId id = 1;
}

message UserInfo {
  pmongo.ObjectId id = 1 [(tagger.tags) = "json:\"_id,omitempty\" bson:\"_id,omitempty\""];
  google.protobuf.Timestamp createdAt = 2 [(tagger.tags) = "bson:\"createdAt,omitempty\""];
  google.protobuf.Timestamp modifiedAt = 3 [(tagger.tags) = "bson:\"modifiedAt,omitempty\""];
  string firstName = 4 [(tagger.tags) = "bson:\"firstName,omitempty\""];
  string lastName = 5 [(tagger.tags) = "bson:\"lastName,omitempty\""];
}

message Res {
  bool success = 1;
  string error = 2;
  uint32 count = 3;
  bytes data = 4;
}
